
Fri Aug 15 11:42:46 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* rand.c: remove useless warnings.

Wed Aug 13 15:49:57 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* class.c: implemented ldtoken for methods and fieldrefs.

2003-08-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* threadpool.c: when mono_async_invoke was called, no one took care of
	monitoring the queue. So if the method invoked took some time and we
	got new async invoke requests after 500 ms (the thread created waited
	that long in WaitForSingleObject), the new async invoke was not called
	until the previous one finished.

	This is fixed now. Thanks to Totte for helping with it.

2003-08-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* threadpool.c: set threadpool_thread to TRUE. Patch by totte.

2003-08-11  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.c (mono_debugger_lookup_type): New function.

2003-08-06  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.c: Added support for static fields,
	properties and methods.

2003-08-06  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.c: Don't store the MonoString's vtable to
	make this work for applications with multiple application domains.

2003-08-04  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.c: Completely reworked the type support; the
	most important thing is that we're now just using one single
	`MonoType' instance per type.

Sat Aug  2 13:05:27 BST 2003 Malte Hildingson <malte@amy.udd.htu.se>

	* mono-endian.h, mono-endian.c, icall.c: Added icall
	ves_icall_System_Double_AssertEndianity to assert double word endianity
	on ARM (FPA). The icall uses a macro defined in mono-endian.h.

Fri Aug 1 16:51:13 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* class.c, class.h, reflection.c, metadata.c, icall.c: more generics
	support, icalls and fixes.

2003-07-31  Miguel de Icaza  <miguel@ximian.com>

	* unicode.c (ves_icall_System_Char_IsPunctuation): The set of